--- a/2019_03_04.ipynb
+++ b/2019_03_04.ipynb
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### numpy array"
+    "## numpy array"
    ]
   },
   {
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### tensorflow"
+    "## tensorflow"
    ]
   },
   {
@@ -249,9 +249,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"abc_5/const:0\", shape=(), dtype=float32)\n",
+      "<tf.Variable 'abc_5/Variable:0' shape=() dtype=float32_ref>\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.name_scope('abc'):\n",
+    "    a = tf.constant(3, dtype = tf.float32, name = 'const')\n",
+    "    b = tf.Variable(0, dtype = tf.float32)\n",
+    "    c = a+b\n",
+    "init = tf.global_variables_initializer()\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    print(sess.run(a+b))\n",
+    "    # print(sess.run(a+b)) => 오류가 난다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "variable은 먼저 초기화를 해줘야한다.  \n",
+    "그래프를 그리는 행위를 session안에서 하면 안된다.  \n",
+    "constant : 값을 변경할 수 없다  \n",
+    "값을 보존하고 변경하고 싶다면 Variable로 선언하면 된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"add_1:0\", shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    print(sess.run(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.name_scope('abc'):\n",
+    "    a = tf.constant(3, dtype = tf.float32, name = 'const')\n",
+    "    b = tf.Variable(0, dtype = tf.float32)\n",
+    "    c = tf.assign(b,a+b)\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    print(sess.run(c))\n",
+    "    print(sess.run(c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Placeholder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "x = tf.placeholder(tf.float32, shape=(), name = 'x')\n",
+    "y = tf.placeholder(tf.float32, shape=(), name = 'y')\n",
+    "w = tf.Variable(np.random.randn(), dtype = tf.float32)\n",
+    "\n",
+    "a = tf.assign(w,w+x+y)\n",
+    "\n",
+    "init = tf.global_variables_initializer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.49671414\n",
+      "3.496714\n",
+      "6.496714\n",
+      "9.496714\n",
+      "12.496714\n",
+      "15.496714\n",
+      "18.496714\n",
+      "21.496714\n",
+      "24.496714\n",
+      "27.496714\n",
+      "30.496714\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    for _ in range(0,10):\n",
+    "        print(sess.run(w))\n",
+    "        sess.run(a, feed_dict={x:1.0, y:2.0})\n",
+    "    print(sess.run(w))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "seed값을 고정함으로써 변하지 않는 seed로 계산한다.(난수 고정)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
